<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/default_padding">

    <ImageView
        android:id="@+id/iv_no_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_error_network"
        app:layout_constraintBottom_toTopOf="@+id/txt_title_no_connection"
        app:layout_constraintEnd_toEndOf="@+id/txt_title_no_connection"
        app:layout_constraintStart_toStartOf="@+id/txt_title_no_connection"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/txt_title_no_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:fontFamily="@font/over_lock"
        android:text="@string/error_no_connection_title"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/subtitle_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_subtitle_no_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/over_lock"
        android:text="@string/error_no_connection_subtitle"
        android:textColor="@color/colorSecondaryText"
        android:textSize="@dimen/body_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/txt_title_no_connection"
        app:layout_constraintStart_toStartOf="@+id/txt_title_no_connection"
        app:layout_constraintTop_toBottomOf="@+id/txt_title_no_connection" />

    <Button
        android:id="@+id/btn_try_gain"
        style="?attr/actionModeCloseButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:fontFamily="@font/over_lock"
        android:background="@drawable/bg_btn"
        android:text="@string/btn_retry"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/button_size"
        app:layout_constraintEnd_toEndOf="@+id/txt_subtitle_no_connection"
        app:layout_constraintStart_toStartOf="@+id/txt_subtitle_no_connection"
        app:layout_constraintTop_toBottomOf="@+id/txt_subtitle_no_connection" />

</android.support.constraint.ConstraintLayout>