<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/default_margin"
    android:layout_marginStart="@dimen/default_margin"
    android:layout_marginEnd="@dimen/default_margin"
    android:foreground="?attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    app:cardElevation="@dimen/default_elevation"
    app:cardCornerRadius="@dimen/card_corner">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/default_padding">

        <ImageView
            android:id="@+id/img_add_to_calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_to_calendar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/txt_date_match"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/body_size"
            android:textColor="@color/colorPrimaryText"
            android:fontFamily="@font/over_lock"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_time_match"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/body_size"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="@font/over_lock"
            app:layout_constraintEnd_toEndOf="@+id/txt_date_match"
            app:layout_constraintStart_toStartOf="@+id/txt_date_match"
            app:layout_constraintTop_toBottomOf="@+id/txt_date_match" />

        <TextView
            android:id="@+id/txt_vs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_vs"
            android:textSize="@dimen/body_size"
            android:textColor="@color/colorPrimaryText"
            android:fontFamily="@font/over_lock"
            android:textAllCaps="true"
            app:layout_constraintEnd_toEndOf="@+id/txt_time_match"
            app:layout_constraintStart_toStartOf="@+id/txt_time_match"
            app:layout_constraintTop_toBottomOf="@+id/txt_time_match"
            app:layout_constraintBottom_toTopOf="@+id/btn_see_details"/>

        <TextView
            android:id="@+id/txt_home_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_margin"
            android:textSize="30sp"
            android:textColor="@color/colorPrimaryText"
            android:fontFamily="@font/over_lock"
            app:layout_constraintTop_toTopOf="@+id/txt_vs"
            app:layout_constraintBottom_toBottomOf="@+id/txt_vs"
            app:layout_constraintEnd_toStartOf="@+id/txt_vs" />

        <TextView
            android:id="@+id/txt_away_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:fontFamily="@font/over_lock"
            android:textColor="@color/colorPrimaryText"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@+id/txt_vs"
            app:layout_constraintStart_toEndOf="@+id/txt_vs"
            app:layout_constraintTop_toTopOf="@+id/txt_vs" />

        <TextView
            android:id="@+id/txt_home_team"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/over_lock"
            android:gravity="center"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/body_size"
            app:layout_constraintBottom_toBottomOf="@+id/txt_home_score"
            app:layout_constraintEnd_toStartOf="@+id/txt_home_score"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txt_home_score" />

        <TextView
            android:id="@+id/txt_away_team"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/over_lock"
            android:gravity="center"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/body_size"
            app:layout_constraintBottom_toBottomOf="@+id/txt_away_score"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_away_score"
            app:layout_constraintTop_toTopOf="@+id/txt_away_score" />

        <TextView
            android:id="@+id/txt_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            android:fontFamily="@font/over_lock"
            android:text="@string/text_home"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/body_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/txt_home_team"
            app:layout_constraintEnd_toEndOf="@+id/txt_home_team"
            app:layout_constraintStart_toStartOf="@+id/txt_home_team"
            app:layout_constraintTop_toBottomOf="@+id/txt_time_match" />

        <TextView
            android:id="@+id/txt_away"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            android:fontFamily="@font/over_lock"
            android:text="@string/text_away"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/body_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/txt_away_team"
            app:layout_constraintEnd_toEndOf="@+id/txt_away_team"
            app:layout_constraintStart_toStartOf="@+id/txt_away_team"
            app:layout_constraintTop_toBottomOf="@+id/txt_time_match" />

        <Button
            android:id="@+id/btn_see_details"
            style="?attr/actionModeCloseButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_see_details"
            android:textSize="@dimen/button_size"
            android:textColor="@color/colorPrimaryText"
            android:fontFamily="@font/over_lock"
            android:textAllCaps="true"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>