<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/default_padding">

        <android.support.v7.widget.CardView
            android:id="@+id/cv_view_keeper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="@dimen/card_corner"
            app:cardElevation="@dimen/default_elevation">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/default_padding">

                <TextView
                    android:id="@+id/tv_keeper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/over_lock"
                    android:text="@string/text_keeper"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/body_size"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_home_keeper"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/over_lock"
                    android:gravity="center"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/body_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_keeper" />

                <TextView
                    android:id="@+id/tv_away_keeper"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/over_lock"
                    android:gravity="center"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/body_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_keeper" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_view_defense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="@dimen/card_corner"
            app:cardElevation="@dimen/default_elevation">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/default_padding">

                <TextView
                    android:id="@+id/tv_defense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/over_lock"
                    android:text="@string/text_defense"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/body_size"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_home_defense"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/over_lock"
                    android:gravity="center"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/body_size"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_defense" />

                <TextView
                    android:id="@+id/tv_away_defense"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/over_lock"
                    android:gravity="center"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/body_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_defense" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_view_midfield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="@dimen/card_corner"
            app:cardElevation="@dimen/default_elevation">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/default_padding">

                <TextView
                    android:id="@+id/tv_midfield"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/over_lock"
                    android:text="@string/text_midfield"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/body_size"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_home_midfield"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/over_lock"
                    android:gravity="center"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/body_size"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_midfield" />

                <TextView
                    android:id="@+id/tv_away_midfield"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/over_lock"
                    android:gravity="center"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/body_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_midfield" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_view_forward"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="@dimen/card_corner"
            app:cardElevation="@dimen/default_elevation">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/default_padding">

                <TextView
                    android:id="@+id/tv_forward"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/over_lock"
                    android:text="@string/text_forward"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/body_size"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_home_forward"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/over_lock"
                    android:gravity="center"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/body_size"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_forward" />

                <TextView
                    android:id="@+id/tv_away_forward"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/over_lock"
                    android:gravity="center"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/body_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_forward" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_view_subtitute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="@dimen/card_corner"
            app:cardElevation="@dimen/default_elevation">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/default_padding">

                <TextView
                    android:id="@+id/tv_subtitute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/over_lock"
                    android:text="@string/text_subtitute"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/body_size"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_home_subtitute"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/over_lock"
                    android:gravity="center"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/body_size"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_subtitute" />

                <TextView
                    android:id="@+id/tv_away_subtitute"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/over_lock"
                    android:gravity="center"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/body_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_subtitute" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>